[gd_scene load_steps=18 format=3 uid="uid://cokkv33v0mm1f"]

[ext_resource type="Script" path="res://scripts/EnemyDefault.gd" id="1_wg42t"]
[ext_resource type="Shader" path="res://shaders/stars1.gdshader" id="2_ntsmk"]
[ext_resource type="PackedScene" uid="uid://dyr50lkw6uyu7" path="res://3D_models/characters/enemies/starfiend1/starfiend1.glb" id="2_x0cfg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ue7u5"]
radius = 0.4
height = 1.96957

[sub_resource type="SphereShape3D" id="SphereShape3D_gu3um"]
radius = 12.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7exl4"]
render_priority = 0
shader = ExtResource("2_ntsmk")
shader_parameter/bg_color = Color(0.0862745, 0.0666667, 0.180392, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fb28r"]
render_priority = 0
shader = ExtResource("2_ntsmk")
shader_parameter/bg_color = Color(0.2, 0.137255, 0.462745, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lg1rd"]
albedo_color = Color(0.882353, 0.619608, 0.835294, 1)
emission_enabled = true
emission = Color(0.788235, 0.411765, 0.733333, 1)
emission_energy_multiplier = 1.85

[sub_resource type="SphereShape3D" id="SphereShape3D_dwnbd"]
margin = 0.05
radius = 0.35

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_uhsm1"]
fadeout_time = 0.1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0la4j"]
animation = &"EnemyAttack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2c81r"]
animation = &"EnemyIdle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yecdt"]
animation = &"EnemyRun"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_4ugm8"]
blend_point_0/node = SubResource("AnimationNodeAnimation_2c81r")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_yecdt")
blend_point_1/pos = 5.0
min_space = 0.0
max_space = 5.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yhm4b"]
animation = &"TakeDamage1"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_o6k74"]
fadein_time = 0.1
fadeout_time = 0.1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_t8u1l"]
graph_offset = Vector2(-468.12, 40.9563)
nodes/AttackShot1/node = SubResource("AnimationNodeOneShot_uhsm1")
nodes/AttackShot1/position = Vector2(120, 100)
nodes/EnemyAttack1/node = SubResource("AnimationNodeAnimation_0la4j")
nodes/EnemyAttack1/position = Vector2(-200, 240)
nodes/IdleRunBlendspace/node = SubResource("AnimationNodeBlendSpace1D_4ugm8")
nodes/IdleRunBlendspace/position = Vector2(-220, 100)
nodes/TakeDamage1/node = SubResource("AnimationNodeAnimation_yhm4b")
nodes/TakeDamage1/position = Vector2(100, 340)
nodes/TakeDamageShot1/node = SubResource("AnimationNodeOneShot_o6k74")
nodes/TakeDamageShot1/position = Vector2(380, 100)
nodes/output/position = Vector2(660, 100)
node_connections = [&"output", 0, &"TakeDamageShot1", &"AttackShot1", 0, &"IdleRunBlendspace", &"AttackShot1", 1, &"EnemyAttack1", &"TakeDamageShot1", 0, &"AttackShot1", &"TakeDamageShot1", 1, &"TakeDamage1"]

[node name="EnemyStarfiend" type="CharacterBody3D" groups=["enemies"]]
collision_layer = 6
collision_mask = 5
script = ExtResource("1_wg42t")
enemy_type = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.98949, 0)
shape = SubResource("CapsuleShape3D_ue7u5")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 3.0
agent_height_offset = 0.1
avoidance_enabled = true
radius = 1.0
neighbor_distance = 25.0
time_horizon = 2.0

[node name="OverlapArea" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="OverlapShape" type="CollisionShape3D" parent="OverlapArea"]
shape = SubResource("SphereShape3D_gu3um")

[node name="GuardTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="EnemyMesh" parent="." instance=ExtResource("2_x0cfg")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="EnemyMesh/Armature" index="0"]
bones/1/position = Vector3(0.00333901, 0.0661643, 0.758833)
bones/1/rotation = Quaternion(0.84557, -0.0688838, -0.0883733, 0.521973)
bones/2/rotation = Quaternion(-0.17745, 0.0773757, 0.00689585, 0.981059)
bones/3/rotation = Quaternion(-0.0166926, -0.0339398, -0.00652034, 0.999263)
bones/4/rotation = Quaternion(0.0463818, -0.0334617, -0.00865512, 0.998326)
bones/5/rotation = Quaternion(0.218714, -0.000501253, -0.00275755, 0.975785)
bones/6/rotation = Quaternion(-0.261097, 0.0847894, -0.00554346, 0.961566)
bones/27/rotation = Quaternion(-0.549751, -0.425278, -0.511756, 0.504993)
bones/28/rotation = Quaternion(-0.356072, 0.116969, 0.0751969, 0.924054)
bones/29/rotation = Quaternion(-0.0632952, -0.115837, -0.587826, 0.798146)
bones/30/rotation = Quaternion(-0.0193918, -0.0712326, 0.072051, 0.994665)
bones/31/position = Vector3(-0.0253908, 0.298998, -0.00194233)
bones/31/rotation = Quaternion(-0.029665, -0.0749867, 0.197162, 0.977049)
bones/32/rotation = Quaternion(-0.0111358, 0.101611, -0.023095, 0.994494)
bones/33/rotation = Quaternion(-0.31708, -0.0193989, -0.0452215, 0.947121)
bones/34/rotation = Quaternion(-0.29798, 0.0267635, 0.00240571, 0.954194)
bones/35/position = Vector3(-0.0106851, 0.306959, 0.0028032)
bones/35/rotation = Quaternion(-0.0377613, -0.0564085, 0.138718, 0.988003)
bones/36/rotation = Quaternion(-0.0558494, 0.0505379, -0.0145158, 0.997054)
bones/37/rotation = Quaternion(-0.298771, 0.0297168, -0.00890658, 0.953821)
bones/38/rotation = Quaternion(-0.330013, 0.024299, 0.00435061, 0.943654)
bones/39/position = Vector3(0.00514369, 0.310886, 0.00216332)
bones/39/rotation = Quaternion(-0.0514434, -0.0875949, 0.0692352, 0.992415)
bones/40/rotation = Quaternion(-0.0514343, 0.0716565, 0.0265078, 0.99575)
bones/41/rotation = Quaternion(-0.297604, 0.0310896, 0.0274992, 0.953787)
bones/42/rotation = Quaternion(-0.311095, 0.0287159, 0.0148469, 0.949829)
bones/43/position = Vector3(0.0182893, 0.310405, -0.000498196)
bones/43/rotation = Quaternion(-0.0739158, -0.0716832, -0.0291778, 0.994257)
bones/44/rotation = Quaternion(-0.0701552, 0.0604205, 0.0864479, 0.991945)
bones/45/rotation = Quaternion(-0.202612, 0.0812072, 0.0394862, 0.975087)
bones/46/rotation = Quaternion(-0.340802, 0.017169, -0.0135365, 0.939881)
bones/47/position = Vector3(0.034776, 0.316874, -0.0275519)
bones/47/rotation = Quaternion(-0.0749582, 0.510943, -0.377117, 0.768831)
bones/48/rotation = Quaternion(-0.273369, 0.153228, 0.0491889, 0.948352)
bones/49/rotation = Quaternion(-0.24514, 0.0657149, 0.0854092, 0.96348)
bones/50/rotation = Quaternion(-0.522121, 0.448157, 0.474904, 0.548644)
bones/51/rotation = Quaternion(-0.406648, -0.256679, 0.110302, 0.86982)
bones/52/rotation = Quaternion(-0.0495115, 0.129941, 0.460198, 0.876859)
bones/53/rotation = Quaternion(-0.00708314, 0.251063, 0.0581386, 0.966197)
bones/54/position = Vector3(0.0152935, 0.304293, -0.00711143)
bones/54/rotation = Quaternion(-0.0409953, 0.254487, -0.0639945, 0.964085)
bones/55/rotation = Quaternion(-0.0111358, -0.101611, 0.023095, 0.994494)
bones/56/rotation = Quaternion(-0.317081, 0.019399, 0.0452215, 0.947121)
bones/57/rotation = Quaternion(-0.29798, -0.0267636, -0.00240575, 0.954194)
bones/58/position = Vector3(0.00170463, 0.308258, 0.00315743)
bones/58/rotation = Quaternion(-0.0355618, 0.235396, -0.00482299, 0.971237)
bones/59/rotation = Quaternion(-0.0558495, -0.0505379, 0.0145158, 0.997054)
bones/60/rotation = Quaternion(-0.298771, -0.0297167, 0.00890657, 0.953821)
bones/61/rotation = Quaternion(-0.330013, -0.024299, -0.00435057, 0.943654)
bones/62/position = Vector3(-0.0136473, 0.308128, 0.00851311)
bones/62/rotation = Quaternion(-0.0399056, 0.262563, 0.0670124, 0.961757)
bones/63/rotation = Quaternion(-0.0514343, -0.0716565, -0.0265078, 0.99575)
bones/64/rotation = Quaternion(-0.297604, -0.0310895, -0.0274991, 0.953787)
bones/65/rotation = Quaternion(-0.311095, -0.028716, -0.0148469, 0.949829)
bones/66/position = Vector3(-0.0263687, 0.304424, 0.0105582)
bones/66/rotation = Quaternion(-0.0418285, 0.241283, 0.166742, 0.955107)
bones/67/rotation = Quaternion(-0.0701552, -0.0604204, -0.0864479, 0.991945)
bones/68/rotation = Quaternion(-0.202612, -0.0812071, -0.0394862, 0.975087)
bones/69/rotation = Quaternion(-0.340802, -0.017169, 0.0135365, 0.939881)
bones/70/position = Vector3(-0.0525966, 0.307105, -0.00813448)
bones/70/rotation = Quaternion(0.0847296, -0.379784, 0.45862, 0.798908)
bones/71/rotation = Quaternion(-0.273369, -0.153228, -0.0491889, 0.948352)
bones/72/rotation = Quaternion(-0.24514, -0.0657151, -0.0854093, 0.96348)
bones/73/rotation = Quaternion(0.271581, 0.429626, 0.857578, -0.0789055)
bones/74/rotation = Quaternion(-0.372577, 0.00882059, -0.0222648, 0.927692)
bones/75/rotation = Quaternion(0.650254, -0.00412906, -0.00884949, 0.759654)
bones/76/rotation = Quaternion(0.197593, -0.00862964, -0.0217366, 0.980005)
bones/77/rotation = Quaternion(0.0025278, 0.381789, 0.922743, 0.0526875)
bones/78/rotation = Quaternion(-0.299146, -0.00705848, 0.0228845, 0.953907)
bones/79/rotation = Quaternion(0.615939, 0.229155, -0.0397462, 0.75268)
bones/80/rotation = Quaternion(0.197593, 0.00862955, 0.0217366, 0.980005)

[node name="character" parent="EnemyMesh/Armature/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_7exl4")
surface_material_override/1 = SubResource("ShaderMaterial_fb28r")
surface_material_override/2 = SubResource("StandardMaterial3D_lg1rd")

[node name="CombatCast3D" type="ShapeCast3D" parent="EnemyMesh"]
transform = Transform3D(-1, 8.74228e-08, -3.82137e-15, 0, -4.37114e-08, -1, -8.74228e-08, -1, 4.37114e-08, -5.94996e-09, 1.1781, 0.0680596)
shape = SubResource("SphereShape3D_dwnbd")
target_position = Vector3(0, -0.7, 0)
margin = 0.05
max_results = 4
collision_mask = 4

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_t8u1l")
anim_player = NodePath("../EnemyMesh/AnimationPlayer")
active = true
root_motion_track = NodePath("Armature/Skeleton3D:root")
parameters/AttackShot1/active = false
parameters/AttackShot1/request = 0
parameters/IdleRunBlendspace/blend_position = 0.0
parameters/TakeDamageShot1/active = false
parameters/TakeDamageShot1/request = 0

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="OverlapArea" to="." method="_on_overlap_area_body_entered"]
[connection signal="body_exited" from="OverlapArea" to="." method="_on_overlap_area_body_exited"]
[connection signal="timeout" from="GuardTimer" to="." method="_on_guard_timer_timeout"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]

[editable path="EnemyMesh"]
